--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "Pacman",
+  "name": "pacman",
   "version": "1.0.0",
   "description": "Code problem details:",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint --ext .ts .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,9 @@
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
