--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,3 +42,7 @@ jobs:
       - name: Run linter
         working-directory: ./
         run: npm run lint
+
+      - name: Run tests
+        working-directory: ./
+        run: npm run test
