--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ext .ts .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand --coverage"
   },
   "repository": {
     "type": "git",
